--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.32.0
-tensorflow-cpu==2.15.0
-numpy==1.26.4
-pillow==10.2.0
-h5py==3.10.0
-protobuf==3.20.3
+streamlit
+tensorflow-cpu==2.13.0
+numpy
+pillow
+h5py
+
